--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "server": "json-server --watch db.json --port 5000",
     "serve:ssr:angularblog": "node dist/angularblog/server/server.mjs"
   },
   "private": true,
